--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
       <!-- Timeblocks go here -->
     </div>
 
+    <!--Scripts go here-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="./assets/js/script.js"></script>
   </body>
 </html>
