add rows and columns for timeblock html

--- a/index.html
+++ b/index.html
@@ -30,6 +30,133 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
+      <!--Row with 3 columns for each one hour block of time-->
+      <div class="row">
+        <div class="col-2 time-block hour" id="nine">9:00 am</div>
+        <div class="col-9 time-slot">
+          <textarea
+            id="textNine"
+            placeholder="Add events here"
+            class="calendarItem"
+            col="50"
+          ></textarea>
+        </div>
+        <div class="col-1 saveBtn text-center">
+          <button id="saveNine" class="btn">Save</button>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-2 time-block hour" id="ten">10:00 am</div>
+        <div class="col-9 time-slot">
+          <textarea
+            id="textTen"
+            placeholder="Add events here"
+            class="calendarItem"
+            col="50"
+          ></textarea>
+        </div>
+        <div class="col-1 saveBtn text-center">
+          <button id="saveTen" class="btn">Save</button>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-2 time-block hour" id="eleven">11:00 am</div>
+        <div class="col-9 time-slot">
+          <textarea
+            id="textEleven"
+            placeholder="Add events here"
+            class="calendarItem"
+            col="50"
+          ></textarea>
+        </div>
+        <div class="col-1 saveBtn text-center">
+          <button id="saveEleven" class="btn">Save</button>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-2 time-block hour" id="twelve">12:00 pm</div>
+        <div class="col-9 time-slot">
+          <textarea
+            id="textTwelve"
+            placeholder="Add events here"
+            class="calendarItem"
+            col="50"
+          ></textarea>
+        </div>
+        <div class="col-1 saveBtn text-center">
+          <button id="saveTwelve" class="btn">Save</button>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-2 time-block hour" id="one">1:00 pm</div>
+        <div class="col-9 time-slot">
+          <textarea
+            id="textOne"
+            placeholder="Add events here"
+            class="calendarItem"
+            col="50"
+          ></textarea>
+        </div>
+        <div class="col-1 saveBtn text-center">
+          <button id="saveOne" class="btn">Save</button>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-2 time-block hour" id="two">2:00 pm</div>
+        <div class="col-9 time-slot">
+          <textarea
+            id="textTwo"
+            placeholder="Add events here"
+            class="calendarItem"
+            col="50"
+          ></textarea>
+        </div>
+        <div class="col-1 saveBtn text-center">
+          <button id="saveTwo" class="btn">Save</button>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-2 time-block hour" id="three">3:00 pm</div>
+        <div class="col-9 time-slot">
+          <textarea
+            id="textThree"
+            placeholder="Add events here"
+            class="calendarItem"
+            col="50"
+          ></textarea>
+        </div>
+        <div class="col-1 saveBtn text-center">
+          <button id="saveThree" class="btn">Save</button>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-2 time-block hour" id="four">4:00 pm</div>
+        <div class="col-9 time-slot">
+          <textarea
+            id="textFour"
+            placeholder="Add events here"
+            class="calendarItem"
+            col="50"
+          ></textarea>
+        </div>
+        <div class="col-1 saveBtn text-center">
+          <button id="saveFour" class="btn">Save</button>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-2 time-block hour" id="five">5:00 pm</div>
+        <div class="col-9 time-slot">
+          <textarea
+            id="textFive"
+            placeholder="Add events here"
+            class="calendarItem"
+            col="50"
+          ></textarea>
+        </div>
+        <div class="col-1 saveBtn text-center">
+          <button id="saveFive" class="btn">Save</button>
+        </div>
+      </div>
     </div>
 
     <!--Scripts go here-->
