update hour id for time blocks to integers in order to check for past/present/future against current time

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <!-- Timeblocks go here -->
       <!--Row with 3 columns for each one hour block of time-->
       <div class="row">
-        <div class="col-2 time-block hour" id="nine">9:00 am</div>
+        <div class="col-2 time-block hour" id="9">9:00 am</div>
         <div class="col-9 time-slot">
           <textarea
             id="textNine"
@@ -46,7 +46,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-2 time-block hour" id="ten">10:00 am</div>
+        <div class="col-2 time-block hour" id="10">10:00 am</div>
         <div class="col-9 time-slot">
           <textarea
             id="textTen"
@@ -60,7 +60,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-2 time-block hour" id="eleven">11:00 am</div>
+        <div class="col-2 time-block hour" id="11">11:00 am</div>
         <div class="col-9 time-slot">
           <textarea
             id="textEleven"
@@ -74,7 +74,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-2 time-block hour" id="twelve">12:00 pm</div>
+        <div class="col-2 time-block hour" id="12">12:00 pm</div>
         <div class="col-9 time-slot">
           <textarea
             id="textTwelve"
@@ -88,7 +88,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-2 time-block hour" id="one">1:00 pm</div>
+        <div class="col-2 time-block hour" id="13">1:00 pm</div>
         <div class="col-9 time-slot">
           <textarea
             id="textOne"
@@ -102,7 +102,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-2 time-block hour" id="two">2:00 pm</div>
+        <div class="col-2 time-block hour" id="14">2:00 pm</div>
         <div class="col-9 time-slot">
           <textarea
             id="textTwo"
@@ -116,7 +116,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-2 time-block hour" id="three">3:00 pm</div>
+        <div class="col-2 time-block hour" id="15">3:00 pm</div>
         <div class="col-9 time-slot">
           <textarea
             id="textThree"
@@ -130,7 +130,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-2 time-block hour" id="four">4:00 pm</div>
+        <div class="col-2 time-block hour" id="16">4:00 pm</div>
         <div class="col-9 time-slot">
           <textarea
             id="textFour"
@@ -144,7 +144,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-2 time-block hour" id="five">5:00 pm</div>
+        <div class="col-2 time-block hour" id="17">5:00 pm</div>
         <div class="col-9 time-slot">
           <textarea
             id="textFive"
