add icon to save button and make jumbotron sticky on scroll

--- a/index.html
+++ b/index.html
@@ -14,20 +14,29 @@
       integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
       crossorigin="anonymous"
     />
+    <!--Font Awesome Kit-->
+    <script
+      src="https://kit.fontawesome.com/a10fd2754e.js"
+      crossorigin="anonymous"
+    ></script>
+    <!--Google Font-->
     <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap"
       rel="stylesheet"
     />
+    <!--My CSS-->
     <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Work Day Scheduler</title>
   </head>
 
   <body>
-    <header class="jumbotron">
-      <h1 class="display-3">Work Day Scheduler</h1>
-      <p class="lead">A simple calendar app for scheduling your work day</p>
-      <p id="currentDay" class="lead"></p>
-    </header>
+    <div class="sticky-top">
+      <header class="jumbotron">
+        <h1 class="display-3">Work Day Scheduler</h1>
+        <p class="lead">A simple calendar app for scheduling your work day</p>
+        <p id="currentDay" class="lead"></p>
+      </header>
+    </div>
     <div class="container">
       <!-- Timeblocks go here -->
       <!--Row with 3 columns for each one hour block of time-->
@@ -42,7 +51,7 @@
           ></textarea>
         </div>
         <div class="col-1 saveBtn text-center">
-          <button id="saveNine" class="btn">Save</button>
+          <button id="saveNine" class="btn"><i class="fa-regular fa-xl fa-floppy-disk"></i></button>
         </div>
       </div>
       <div class="row">
@@ -56,7 +65,7 @@
           ></textarea>
         </div>
         <div class="col-1 saveBtn text-center">
-          <button id="saveTen" class="btn">Save</button>
+          <button id="saveTen" class="btn"><i class="fa-regular fa-xl fa-floppy-disk"></i></button>
         </div>
       </div>
       <div class="row">
@@ -70,7 +79,7 @@
           ></textarea>
         </div>
         <div class="col-1 saveBtn text-center">
-          <button id="saveEleven" class="btn">Save</button>
+          <button id="saveEleven" class="btn"><i class="fa-regular fa-xl fa-floppy-disk"></i></button>
         </div>
       </div>
       <div class="row">
@@ -84,7 +93,7 @@
           ></textarea>
         </div>
         <div class="col-1 saveBtn text-center">
-          <button id="saveTwelve" class="btn">Save</button>
+          <button id="saveTwelve" class="btn"><i class="fa-regular fa-xl fa-floppy-disk"></i></button>
         </div>
       </div>
       <div class="row">
@@ -98,7 +107,7 @@
           ></textarea>
         </div>
         <div class="col-1 saveBtn text-center">
-          <button id="saveOne" class="btn">Save</button>
+          <button id="saveOne" class="btn"><i class="fa-regular fa-xl fa-floppy-disk"></i></button>
         </div>
       </div>
       <div class="row">
@@ -112,7 +121,7 @@
           ></textarea>
         </div>
         <div class="col-1 saveBtn text-center">
-          <button id="saveTwo" class="btn">Save</button>
+          <button id="saveTwo" class="btn"><i class="fa-regular fa-xl fa-floppy-disk"></i></button>
         </div>
       </div>
       <div class="row">
@@ -126,7 +135,7 @@
           ></textarea>
         </div>
         <div class="col-1 saveBtn text-center">
-          <button id="saveThree" class="btn">Save</button>
+          <button id="saveThree" class="btn"><i class="fa-regular fa-xl fa-floppy-disk"></i></button>
         </div>
       </div>
       <div class="row">
@@ -140,7 +149,7 @@
           ></textarea>
         </div>
         <div class="col-1 saveBtn text-center">
-          <button id="saveFour" class="btn">Save</button>
+          <button id="saveFour" class="btn"><i class="fa-regular fa-xl fa-floppy-disk"></i></button>
         </div>
       </div>
       <div class="row">
@@ -154,7 +163,7 @@
           ></textarea>
         </div>
         <div class="col-1 saveBtn text-center">
-          <button id="saveFive" class="btn">Save</button>
+          <button id="saveFive" class="btn"><i class="fa-regular fa-xl fa-floppy-disk"></i></button>
         </div>
       </div>
     </div>
