add clear schedule button and footer for styling/layout

--- a/index.html
+++ b/index.html
@@ -166,6 +166,9 @@
           <button id="saveFive" class="btn"><i class="fa-regular fa-xl fa-floppy-disk"></i></button>
         </div>
       </div>
+      <div><br>
+      <button class="clearBtn" id="clear">Clear Schedule</button>
+    </div>
     </div>
 
     <!--Scripts go here-->
@@ -173,4 +176,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="./assets/js/script.js"></script>
   </body>
+  <footer class="footer">
+  </footer>
 </html>
